# whist

./: Cargo.toml
examples/: cli.rs
examples/cli_requester/: mod.rs
src/: lib.rs  rules.rs
src/contracts/: contractors.rs  hand.rs  mod.rs
src/game/: contractors.rs  game.rs  hand.rs  mod.rs  players.rs  rules.rs
src/gamemodes/: emballage.rs  misere.rs  mod.rs  picolo.rs  score.rs  seul.rs
src/players/: mod.rs  players.rs
src/scoring/: mod.rs  score.rs
src/scoring/gamemodes/: emballage.rs  misere.rs  mod.rs  picolo.rs  seul.rs
