[package]
name = "whist"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
async-trait = "0.1"
itertools = "0.14"
serde = { version = "1.0.219", features = ["derive"], optional = true}
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2"

[dev-dependencies]
tokio = {version = "1.48.0", features = ["full"]}

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# future_not_send = {level = "allow", priority = -1}
