[package]
name = "whist"
version = "0.1.0"
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
itertools = "0.14"
serde = { version = "1.0.219", features = ["derive"], optional = true}
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
# future_not_send = {level = "allow", priority = -1}
